2009-09-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-file-fprop): 445 find the FPROP in
	derived buffers of the file (such as version backups)
	(clearcase-diff-with-diff): 446 use `vc-find-revision' to obtain
	required revisions, also don't delete the revisions afterwards.

2009-09-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-diff-with-diff): don't make FILE
	relative to the current directory when passing it to diff.

2009-08-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-revision-contributors): make REVISION
	optional, to allow for fething contributors for a checked out
	revision.
	(vc-clearcase-state-heuristic): if the latest version was merged
	into the current checkedout one, mark the file as 'edited

2009-08-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-register): 437 support registering
	multiple files.  Also use the COMMENT parameter if passed in.
	(vc-clearcase-state, vc-clearcase-state-heuristic): return
	'unregistered when file is not registered with ClearCase

2009-07-20  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-annotate-warp-revisionm)
	(vc-annotate-extract-revision-at-line): declare function to
	prevent compiler warning
	(vc-clearcase-annotate-contributor)
	(vc-clearcase-annotate-contributor-to-line)
	(vc-clearcase-annotate-latest-on-branch): declare
	`vc-annotate-parent-file', `vc-annotate-parent-rev' as special.

2009-07-15  Alex Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (cleartool-wait-for): 423 Fix Bug #2821317, `or'
	short-circuit was preventing `accept-process-output' being called.

2009-07-10  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-annotate-contributor)
	(vc-clearcase-annotate-contributor-to-line)
	(vc-clearcase-annotate-latest-on-branch): new functions
	(vc-clearcase-patch-annotate-mode): new function, called after